added jquery migrate
stellar js does not work with jquery 3+ out of the box

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ prekvapivej pointy. A Vianoce sa môžu začať...</p>
     </section>
 
     <section class="quotes" data-stellar-background-ratio="0.5">
-
+		<div class="quotes-overlay"></div>
     </section>
 
     <section id="authors">
@@ -221,6 +221,7 @@ prekvapivej pointy. A Vianoce sa môžu začať...</p>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
+	<script src="https://code.jquery.com/jquery-migrate-3.0.1.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- Plugin JavaScript -->
