--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ prekvapivej pointy. A Vianoce sa môžu začať...</p>
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="http://code.jquery.com/jquery-migrate-3.0.1.min.js"></script>
-    <script src="vendor/stellar/jquery.stellar.js"></script>
+    <script src="vendor/stellar/jquery.stellar.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- Plugin JavaScript -->
