--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
           <div class="swiper-slide first-slide" id="swiper-background">
               <div class="innerslider">
                   <div class="slidercontent" style="opacity: 1;">
-                      <p class="slidercontent-title slidercontent-black animated fadeInDown">Adela</p>
+                      <p class="slidercontent-title slidercontent-black animated fadeInDown">Peter Karpinský: Adela, ani to neskúšaj!</p>
                   </div>
               </div>
           </div>
           <div class="swiper-slide" id="swiper-background2">
               <div class="innerslider">
                   <div class="slidercontent" style="opacity: 1;">
-                      <p class="slidercontent-title slidercontent-white animated fadeInDown">Machula</p>
+                      <p class="slidercontent-title slidercontent-white animated fadeInDown">Zuzana Holasová: Strašidelné mesto</p>
                   </div>
               </div>
           </div>
