changed texts on swiper

--- a/index.html
+++ b/index.html
@@ -64,14 +64,16 @@
           <div class="swiper-slide first-slide" id="swiper-background">
               <div class="innerslider">
                   <div class="slidercontent" style="opacity: 1;">
-                      <p class="slidercontent-title slidercontent-black animated fadeInDown">Peter Karpinský: Adela, ani to neskúšaj!</p>
+                      <p class="slidercontent-title slidercontent-black animated fadeInDown">Peter Karpinský</p>
+                      <p class="slidercontent-title slidercontent-black animated fadeInDown">Adela, ani to neskúšaj!</p>
                   </div>
               </div>
           </div>
           <div class="swiper-slide" id="swiper-background2">
               <div class="innerslider">
-                  <div class="slidercontent" style="opacity: 1;">
-                      <p class="slidercontent-title slidercontent-white animated fadeInDown">Zuzana Holasová: Strašidelné mesto</p>
+                  <div class="slidercontent2" style="opacity: 1;">
+                      <p class="slidercontent-title slidercontent-white animated fadeInDown">Zuzana Holasová</p>
+                      <p class="slidercontent-title slidercontent-white animated fadeInDown">Strašidelné mesto</p>
                   </div>
               </div>
           </div>
